# RustyUKI

./: Cargo.toml  README.md  uki-setup.sh
.github/rpm/: rustyuki.spec
.github/workflows/: checks.yml  release-fedora-rpm.yml  rpm-build.yml  rpm.yml
src/: app.rs  cli.rs  cmd.rs  config.rs  dracut.rs  efi.rs  error.rs  hook.rs  kernel.rs  main.rs  privilege.rs  ukify.rs
tests/: integration_cli.rs  test_uki_setup.sh
